--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,8 +1,10 @@
 <div class="navbar navbar-inverse navbar-fixed-top" id="header">
 	<div class="navbar-inner">
-		<div class="container" style="width: auto;">
-			<a class="brand"><i class="icon-chevron-left icon-white"
-				style="margin-top: 4px; margin-left: 5px; margin-right: 3px;"></i>mWater</a>
+		<div class="container" style="width: auto">
+			<i class="icon-chevron-left icon-white" id="navbar_back" 
+				style="margin-top: 13px; margin-left: 5px; float: left;"></i>
+			<a class="brand">
+				<span id="navbar_title">mWater</span></a>
 			<a class="btn btn-navbar pull-right" style="display: block"
 				id="navbar_slidemenu_button"><span class="icon-bar"></span><span
 				class="icon-bar"></span><span class="icon-bar"></span></a>
