--- a/app/templates/SlideMenu.hbs
+++ b/app/templates/SlideMenu.hbs
@@ -1,7 +1,2 @@
-<h3>Pages</h3>
-<ul>
-  <li><a>Home</a></li>
-  <li><a>Sources</a></li>
-  <li><a>Settings</a></li>
-  <li><a>Report a Problem</a></li>
-</ul>
+<div id="content">
+</div>
