--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -13,4 +13,4 @@
 		</div>
 	</div>
 </div>
-<div id="content" style="margin-top: 40px"></div>
+<div id="appview_content" style="margin-top: 40px"></div>
