--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -3,8 +3,8 @@
 <li><a id="home"><i class="icon-home icon-white"></i> Home</a></li>
 <li><a id="sources"><i class="icon-th-list icon-white"></i> Source List</a></li>
 <li><a id="start_survey"><i class="icon-list-alt icon-white"></i> Start a Survey</a></li>
-<li><a id="finish_survey"><i class="icon-"></i> Complete an Existing Survey</a></li>
-<li><a id="settings"><i class="icon-wrench icon-white"></i> Settings</a></li>
-<li><a id="report_problem"><i class="icon-"></i> Report a Problem</a></li>
+<li><a id="finish_survey"><i class="icon-check icon-white"></i> Complete Existing Survey</a></li>
+<li><a id="settings"><i class="icon-cog icon-white"></i> Settings</a></li>
+<li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
 <li><a id="logout"><i class="icon-off icon-white"></i> Logout</a></li>
 </ul>
