--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -1,8 +1,9 @@
 <h3>Activities</h3>
 <ul>
 <li><a id="home"><i class="icon-home icon-white"></i> Home</a></li>
-<li><a id="sources"><i class="icon-th-list icon-white"></i> Source List</a></li>
-<li><a id="start_survey"><i class="icon-list-alt icon-white"></i> Start a Survey</a></li>
+<li><a id="sources"><i class="icon-th-list icon-white"></i> List of Sources</a></li>
+<li><a id="source_map"><i class="icon-map-marker icon-white"></i> Map of Sources</a></li>
+<li><a id="start_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
 <li><a id="finish_survey"><i class="icon-check icon-white"></i> Complete Existing Survey</a></li>
 <li><a id="settings"><i class="icon-cog icon-white"></i> Settings</a></li>
 <li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
