--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,1 +1,3 @@
 <button id="survey" class="btn btn-large btn-block" type="button">Start WHO UNICEF Sanitary Inspection Survey</button>
+<div></div>
+<button id="source_list" class="btn btn-large btn-block" type="button">View Source List</button>
