--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -20,16 +20,16 @@
     <div style="border: 1px solid #A0A0A0; padding: 5px; width: 100px; min-height: 75px; float:right;">
         <img id="photo" style="max-width: 100px; display: block; margin-left: auto; margin-right: auto"/>
     </div>
-    <h3>{name}</h3>
+    <h3>{{name}}</h3>
     <div class="margined">
         <div style="color: Gray">
-            {desc}
+            {{desc}}
         </div>
         <div>
-            <b>ID:</b> {code}
+            <b>ID:</b> {{code}}
         </div>
         <div>
-            <b>Type:</b> {#loc field="sources.source_type" value=source_type/}
+            <b>Type:</b> {{source_type}}
         </div>
         <button id="edit_source_button" class="btn"><i class="icon-edit"></i> Edit Source</button>
     </div>
