--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -4,7 +4,7 @@
 			<i class="icon-chevron-left icon-white" id="navbar_back" 
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
 			<a class="brand">
-				<span id="navbar_title">mWater</span></a>
+				<span id="navbar_title"></span></a>
 			<a class="btn btn-navbar pull-right" style="display: block"
 				id="navbar_slidemenu_button"><span class="icon-bar"></span><span
 				class="icon-bar"></span><span class="icon-bar"></span></a>
