--- a/app/templates/pages/SourceMapPage.hbs
+++ b/app/templates/pages/SourceMapPage.hbs
@@ -1,5 +1,27 @@
 <style>
-html, body, #map { height: 100%; }
+html, body { height: 100%; }
+
+/*body, .appview {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.appview, .appview_content, #pager, .page {
+  bottom: 0;
+  float: left;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  margin: 0;
+  width: 100%;
+}
+.page { padding: 0px; }
+.page { margin-top: 40px;}*/
+
+.page { padding: 0px;}
+#map { width: 100%;}
+
 </style>
 
 <div id="map"></div>
