--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -6,6 +6,6 @@ To begin, click the menu button at top-right corner. You'll find a list of all o
 
 <br/><br/><br/>
 
-<button id="survey" class="btn btn-primary" type="button">Start WHO UNICEF Sanitary Inspection Survey</button>
+<button id="survey" class="btn btn-primary" type="button">Start WHO UNICEF Sanitary Inspection Survey &gt;</button>
 <br/>
 <!--<button id="source_list" class="btn btn-primary" type="button">View Source List</button>-->
