Switched to lodash. Source editing partially there

--- a/app/templates/pages/SourceListPage.hbs
+++ b/app/templates/pages/SourceListPage.hbs
@@ -1,4 +1,7 @@
 <div>
+  <div id="location_msg" class="alert alert-info">
+    Waiting for GPS location...
+  </div>
   <table class="table" id="table">
   </table>
 </div>
