--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -35,12 +35,8 @@
     </div>
     <div class="row-fluid">
         <div class="span12">
-            <div id="location">
-                <h4>Location</h4>
-                <span class="buttoned" id="location_relative"> </span>
-                <button id="location_set" class="btn margined"><i class="icon-map-marker"></i> Set</button>
-                <button id="location_map" class="btn margined">Map</button>
-            </div>
+            <h4>Location</h4>
+            <div id="location"></div>
             <h4>Analysis</h4>
             <table id="analyses" class="table"></table>
 
