Major survey progress

--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -4,8 +4,8 @@
 <li><a id="home"><i class="icon-user icon-white"></i> Login</a></li>
 <li><a id="source_list"><i class="icon-th-list icon-white"></i> List of Sources</a></li>
 <li><a id="source_map"><i class="icon-map-marker icon-white"></i> Map of Sources</a></li>
-<li><a id="start_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
-<li><a id="finish_survey"><i class="icon-check icon-white"></i> Complete Existing Survey</a></li>
+<li><a id="new_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
+<li><a id="existing_survey"><i class="icon-check icon-white"></i> Continue Existing Survey</a></li>
 <li><a id="settings"><i class="icon-cog icon-white"></i> Settings</a></li>
 <li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
 <li><a id="logout"><i class="icon-off icon-white"></i> Logout</a></li>
