--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,11 +1,11 @@
-<h2>mWater Mobile App</h2>
+<h3>mWater Mobile App</h3>
 
 <p>Welcome to mWater's mobile app. This app allows you to find, create and update water sources, and fill out surveys.</p>
 
-To begin, click the menu button at top-right corner. You'll find a list of all of the different  activities you can do with this app.
+To begin, click the menu button at top-right corner. You'll find a list of all of the different activities you can do with this app.
 
 <br/><br/><br/>
 
-<button id="survey" class="btn btn-primary" type="button">Start WHO UNICEF Sanitary Inspection Survey &gt;</button>
+<!--<button id="survey" class="btn btn-primary" type="button">Start WHO UNICEF Sanitary Inspection Survey &gt;</button>-->
 <br/>
 <!--<button id="source_list" class="btn btn-primary" type="button">View Source List</button>-->
