--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -1,7 +1,7 @@
 <h3>Activities</h3>
 <ul>
 <li><a id="home"><i class="icon-home icon-white"></i> Home</a></li>
-<li><a id="home"><i class="icon-user icon-white"></i> Login</a></li>
+<li><a id="login"><i class="icon-user icon-white"></i> Login</a></li>
 <li><a id="source_list"><i class="icon-th-list icon-white"></i> List of Sources</a></li>
 <li><a id="source_map"><i class="icon-map-marker icon-white"></i> Map of Sources</a></li>
 <li><a id="new_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
