--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -7,6 +7,7 @@
 </style>
 
 <h4>Select survey to continue</h4>
+{{#if responses}}
 <ul class="nav nav-tabs nav-stacked">
   {{#each responses}}
   <li>
@@ -14,3 +15,6 @@
   </li>
   {{/each}}
 </ul>
+{{else}}
+  <h5>No incompleted surveys available for you.</h5>
+{{/if}}
