Before save/cancel

--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -29,7 +29,7 @@
             <b>ID:</b> {{code}}
         </div>
         <div>
-            <b>Type:</b> {{source_type}}
+            <b>Type:</b> <span id="source_type"></span>
         </div>
         <button id="edit_source_button" class="btn"><i class="icon-edit"></i> Edit Source</button>
     </div>
