--- a/app/templates/pages/SourceEditPage.hbs
+++ b/app/templates/pages/SourceEditPage.hbs
@@ -1,18 +1,5 @@
 <div class="page">
-    <!-- TODO <label class="control-label">Source Type</label>
-    <select id="source_type">
-        <option value=""></option>
-        {#sourceTypes}
-        <option value="{.}">{#loc field="sources.source_type" value=./}</option>
-        {/sourceTypes}
-    </select>-->
-    <div>
-        <label class="control-label">Name</label>
-        <input id="name" type="text" placeholder="Optional name" value="{{source.name}}" />
-    </div>
-    <div>
-        <label class="control-label">Description</label>
-        <input id="desc" type="text" placeholder="Optional description" value="{{source.desc}}"/>
+    <div id="questions">
     </div>
     <div>
         <button id="save_button" type="button" class="btn btn-primary margined">
