--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -37,16 +37,18 @@
         <div class="span12">
             <h4>Location</h4>
             <div id="location"></div>
-            <h4>Analysis</h4>
-            <table id="analyses" class="table"></table>
+            {{! TODO put back in }}
+            <!--<h4>Analysis</h4>
+            <table id="analyses" class="table"></table>-->
 
             <button id="add_test_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Water Tests</h4>
             <table id="tests" class="table"></table>
 
-            <button id="add_note_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
+            {{! TODO put back in }}
+            <!--<button id="add_note_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Notes</h4>
-            <table id="notes" class="table"></table>
+            <table id="notes" class="table"></table>-->
         </div>
     </div>
 </div>
