Added another test

--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,11 +1,15 @@
-<h3>mWater Mobile App</h3>
+<h3><img src="img/mwater-large.png" style="max-height: 64px"></img>mWater Mobile App</h3>
 
-<p>Welcome to mWater's mobile app. This app allows you to find, create and update water sources, and fill out surveys.</p>
+<p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
 
-To begin, click the menu button at top-right corner. You'll find a list of all of the different activities you can do with this app.
+<p>To perform tasks, click on the menu button at the top right corner. This will show you all of the basic activities that can be performed.</p>
 
-<br/><br/><br/>
+<p>You can browse nearby water sources in the list of sources. You can also see water sources on a map.</p>
 
-<!--<button id="survey" class="btn btn-primary" type="button">Start WHO UNICEF Sanitary Inspection Survey &gt;</button>-->
-<br/>
-<!--<button id="source_list" class="btn btn-primary" type="button">View Source List</button>-->
+<p>Recording water tests is as easy as clicking on the plus icon, or opening a particular water source and clicking Add. mWater supports a wide range of water tests and has reliable, low-cost water tests available for sale.</p>
+
+<p>Some actions will require you to be logged in and will ask you for a username and password. If you do not have one, signing up is an easy one step process.</p>
+
+<p>This app works both with and without a data connection. Any changes that you make while not connected will be automatically uploaded the next time you use the app with a data connection.</p>
+
+<p>mWater includes a powerful and flexible survey engine. Start a sample survey or see the complete list of available surveys. Any work that you do on a survey is always immediately backed up, and you can leave and return to complete a survey at a later time.</p>
