--- a/forms/compactdry/views/detail.hbs
+++ b/forms/compactdry/views/detail.hbs
@@ -1,1 +1,6 @@
-Question 1: {{q1}}
+
+<div><strong><i>E.Coli Colonies</i></strong>: {{ecoli}}</div>
+<div><strong><i>Total Coliform Colonies</i></strong>: {{tc}}</div>
+
+<div>Dilution: {{dilution}}</div>
+<div>Notes: {{notes}}</div>
