Added photo questions

--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -16,5 +16,5 @@
   {{/each}}
 </ul>
 {{else}}
-  <h5>No incompleted surveys available for you.</h5>
+  <h5>No incompleted surveys found</h5>
 {{/if}}
