--- a/forms/10ml Colilert/views/detail.hbs
+++ b/forms/10ml Colilert/views/detail.hbs
@@ -1,4 +1,5 @@
 
+<div><strong><i>Water Source ID</i></strong>: {{#if source}}{{source}}{{else}}<i>None</i>{{/if}}</div>
 <div><strong><i>E.Coli</i></strong>: {{#if ecoli}}Present{{else}}Absent{{/if}}</div>
 <div><strong><i>Total Coliform</i></strong>: {{#if tc}}Present{{else}}Absent{{/if}}</div>
 
