--- a/forms/compactdry/views/detail.hbs
+++ b/forms/compactdry/views/detail.hbs
@@ -1,4 +1,6 @@
 
+<div><strong><i>Water Source ID</i></strong>: {{#if source}}{{source}}{{else}}<i>None</i>{{/if}}</div>
+
 <div><strong><i>E.Coli Colonies</i></strong>: {{ecoli}}</div>
 <div><strong><i>Total Coliform Colonies</i></strong>: {{tc}}</div>
 
