--- a/app/templates/ContextMenu.hbs
+++ b/app/templates/ContextMenu.hbs
@@ -1,7 +1,7 @@
 {{#if items}}
 <ul>
   {{#each items}}
-  <li><a id="{{id}}">
+  <li><a id="{{id}}" class="menuitem">
     <i class="icon-{{glyph}} icon-white"></i> {{text}}</a></li>
   {{/each}}
 </ul>
