--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -20,6 +20,9 @@
     <!-- TODO <div style="border: 1px solid #A0A0A0; padding: 5px; width: 100px; min-height: 75px; float:right;">
         <img id="photo" style="max-width: 100px; display: block; margin-left: auto; margin-right: auto"/>
     </div>-->
+    {{#if select}}
+    <div><button id="select_source" class="btn btn-primary btn-large"><i class="icon-ok icon-white"></i> Select Source</button></div>
+    {{/if}}
     <h3>{{source.name}}</h3>
     <div class="margined">
         <div style="color: Gray">
