--- a/app/templates/pages/NewTestPage.hbs
+++ b/app/templates/pages/NewTestPage.hbs
@@ -7,10 +7,12 @@
 </style>
 
 <h4>Select type of test to start</h4>
-<ul class="nav nav-tabs nav-stacked">
+<table class="table table-bordered">
   {{#each forms}}
-  <li>
-    <a class="test" id="{{code}}">{{name}} &gt;</a>
-  </li>
+  <tr class="test tappable" id="{{code}}">
+    <td><strong>{{name}}</strong> 
+    <br/>
+    <span class="muted">{{desc}}&nbsp;</span></td>
+  </tr>
   {{/each}}
 </ul>
