--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -46,7 +46,7 @@
 
             <button id="add_test_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Water Tests</h4>
-            <table id="tests" class="table"></table>
+            <table id="tests" class="table table-bordered"></table>
 
             {{! TODO put back in }}
             <!--<button id="add_note_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
