--- a/app/templates/pages/TestListPage_items.hbs
+++ b/app/templates/pages/TestListPage_items.hbs
@@ -2,8 +2,9 @@
 <tr class="tappable" id="{{_id}}">
   {{! TODO don't include name here directly }}
   <td><strong>{{name}}</strong></td>
-  <td><strong>{{#if source}}Source {{source}}{{/if}}</strong></td>
-  <td>{{formatDate started "%F"}}</strong></td>
+  <td style="border-left:none;"><strong>{{#if source}}Source {{source}}{{/if}}</strong></td>
+  <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
+  <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
 </tr>
 {{else}}
 <tr>
