--- a/app/templates/pages/SourceListPage.hbs
+++ b/app/templates/pages/SourceListPage.hbs
@@ -2,6 +2,10 @@
   <div id="location_msg" class="alert alert-info">
     Waiting for GPS location...
   </div>
+  <div id="search_bar" class="alert alert-info">
+    <button type="button" class="close" id="search_cancel">&times;</button>
+    Searching for: <span id="search_text" style="font-weight:bold"></span>
+  </div>
   <table class="table" id="table">
   </table>
 </div>
