--- a/app/templates/pages/SourceListPage.hbs
+++ b/app/templates/pages/SourceListPage.hbs
@@ -4,7 +4,7 @@
   </div>
   <div id="search_bar" class="alert alert-info">
     <button type="button" class="close" id="search_cancel">&times;</button>
-    Searching for: <span id="search_text" style="font-weight:bold"></span>
+    Search results for: <span id="search_text" style="font-weight:bold"></span>
   </div>
   <table class="table" id="table">
   </table>
