Source notes added

--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -46,12 +46,11 @@
 
             <button id="add_test_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Water Tests</h4>
-            <table id="tests" class="table table-bordered"></table>
+            <table id="tests" class="table"></table>
 
-            {{! TODO put back in }}
-            <!--<button id="add_note_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
+            <button id="add_note_button" class="btn pull-right margined"><i class="icon-plus-sign"></i> Add</button>
             <h4 class="buttoned">Notes</h4>
-            <table id="notes" class="table"></table>-->
+            <table id="notes" class="table"></table>
         </div>
     </div>
     <div id="photos"></div>
