--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -29,11 +29,14 @@
             {{source.desc}}
         </div>
         <div>
-            <b>ID:</b> {{code}}
+            <b>ID:</b> {{source.code}}
         </div>
         <div>
             <b>Type:</b> <span id="source_type"></span>
         </div>
+        {{#if source.private}}
+        <div class="text-warning">Private</div>
+        {{/if}}
         <button id="edit_source_button" class="btn"><i class="icon-edit"></i> Edit Source</button>
     </div>
     <div class="row-fluid">
