--- a/app/templates/pages/SourcePage_tests.hbs
+++ b/app/templates/pages/SourcePage_tests.hbs
@@ -3,6 +3,7 @@
   {{! TODO don't include name here directly }}
   <td><strong>{{name}}</strong></td>
   <td style="border-left:none;">{{formatDate started "%F"}}</td>
+  <td>{{#if completed}}{{else}}<span class="text-warning"><b>Incomplete</b></span>{{/if}}</td>
   <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
 </tr>
 {{else}}
