More work on images

--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -56,5 +56,10 @@
             <table id="notes" class="table"></table>
         </div>
     </div>
-    <div id="photos"></div>
+    <div class="row-fluid">
+        <div class="span12">
+            <h4>Photos</h4>
+            <div id="photos"></div>
+        </div>
+    </div>
 </div>
