--- a/app/templates/forms/ImagesQuestion.hbs
+++ b/app/templates/forms/ImagesQuestion.hbs
@@ -1,5 +1,7 @@
 {{#each images}}
 <img id="{{id}}" class="img-rounded thumbnail" style="max-height: 100px" onError="this.onerror=null;this.src='img/no-image-icon.jpg';" />
-{{else}}
-<img src="img/camera-icon.jpg" id="camera" class="img-rounded" style="max-height: 100px"/>
 {{/each}}
+
+{{#if canAdd}}
+<img src="img/camera-icon-add.jpg" id="add" class="img-rounded" style="max-height: 100px"/>
+{{/if}}
