--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -1,5 +1,5 @@
 <style>
-    a { font-weight: bold; }
+    .page ul > li > a { font-weight: bold; }
     .page ul > li > a:hover {
       background-color: transparent; // Prevent hover as is problem with touch
     }
