--- a/app/templates/pages/NewSurveyPage.hbs
+++ b/app/templates/pages/NewSurveyPage.hbs
@@ -9,7 +9,7 @@
 <h4>Select type of survey to start</h4>
 <table class="table table-bordered">
   {{#each forms}}
-  <tr class="survey tappable" id="{{_id}}">
+  <tr class="survey tappable" id="{{code}}">
     <td>{{name}}</a>
     <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
   </tr>
