--- a/app/templates/forms/ImageQuestion.hbs
+++ b/app/templates/forms/ImageQuestion.hbs
@@ -1,10 +1,20 @@
+<ul class="thumbnails">
 {{#if image}}
-<img id="{{image.id}}" class="img-rounded thumbnail" style="max-height: 100px" onError="this.onerror=null;this.src='img/no-image-icon.jpg';" />
+  <li>
+    <div class="thumbnail">
+      <img id="{{image.id}}" src="img/image-loading.png" class="thumbnail-img" style="max-height: 100px" onError="this.onerror=null;this.src='img/no-image-icon.jpg';" />
+    </div>
+  </li>
 {{/if}}
 
 {{#if canAdd}}
-<img src="img/camera-icon-add.jpg" id="add" class="img-rounded" style="max-height: 100px"/>
+  <li>
+    <div class="thumbnail">
+      <img src="img/camera-icon-add.jpg" id="add" class="img-rounded" style="max-height: 100px"/>
+    </div>
+  </li>
 {{/if}}
+</ul>
 
 {{#if noImage}}
 <div class="muted">No images present</div>
