--- a/app/templates/pages/TestListPage_items.hbs
+++ b/app/templates/pages/TestListPage_items.hbs
@@ -1,7 +1,6 @@
 {{#each tests}}
 <tr class="tappable" id="{{_id}}">
-  {{! TODO don't include name here directly }}
-  <td><strong>{{name}}</strong></td>
+  <td><strong><span id="name_{{_id}}"></span></strong></td>
   <td style="border-left:none;"><strong>{{#if source}}Source {{source}}{{/if}}</strong></td>
   <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
   <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
