--- a/app/templates/forms/Sections.hbs
+++ b/app/templates/forms/Sections.hbs
@@ -1,5 +1,6 @@
 <ul class="breadcrumb"></ul>
 <div class="sections"></div>
+<button id="close" type="button" class="btn">Save for Later</button>&nbsp;
 <button type="button" class="btn prev"><i class="icon-backward"></i> Back</button>&nbsp;
 <button type="button" class="btn btn-primary next">Next <i class="icon-forward icon-white"></i></button>
 <button type="button" class="btn btn-primary finish">Finish</button>
