--- a/app/templates/pages/SourcePage_notes.hbs
+++ b/app/templates/pages/SourcePage_notes.hbs
@@ -7,7 +7,7 @@
     {{#is status "broken"}}<span class="text-error">Non-functional</span>{{/is}}
     {{#is status "missing"}}<span class="text-error">No longer exists</span>{{/is}}
   </td>
-  <td><span class="muted">{{truncate notes 31 "..."}}</td>
+  <td>{{#if notes}}<span class="muted">{{truncate notes 31 "..."}}{{/if}}</td>
   <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
 </tr>
 {{else}}
