Major refactor. All tests not running.

--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -22,7 +22,7 @@
               <input id="signup_password" type="password" placeholder="Password" />
           </div>
           <div>
-              <button id="signup_button" type="submit" class="btn btn-primary btn-large">Signup</button>
+              <button id="signup_button" type="submit" class="btn btn-primary">Signup</button>
           </div>
        </form>
       </div>
@@ -35,11 +35,12 @@
               <input id="login_password" type="password" placeholder="Password" />
           </div>
           <div>
-              <button id="login_button" type="submit" class="btn btn-primary btn-large">Login</button>
+              <button id="login_button" type="submit" class="btn btn-primary">Login</button>
           </div>
       </form>
       </div>
     </div>
   </div>
-  <div class="alert">Note: Disabled in demo version</div>
+
+  <button id="demo_button" type="submit" class="btn btn-inverse">Enter Demo Mode</button>
 </div>
