--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -1,3 +1,7 @@
 <div>
   <button id="reset_db" class="btn btn-danger" type="button">Reset Local Database</button>
 </div>
+
+<div>
+  <button id="crash" class="btn btn-danger" type="button">Crash!</button>
+</div>
