Source codes now work 100%

--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -1,5 +1,14 @@
+<h5>Offline Source Creation</h5>
 <div>
-  <button id="reset_db" class="btn btn-danger" type="button">Reset Local Database</button>
+    Number of sources that can be created offline: <b>{{offlineSourceCodes}}</b>
+</div>
+<button id="request_source_codes" class="btn" type="button">Request more</button>
+
+
+<h4>Advanced</h4>
+<div>
+  <button id="reset_db" class="btn btn-danger" type="button">Reset Local Storage</button>
+  <span class="help-block">This will completely reset any cached data and cause you to lose any pending changes that you have not uploaded</span>
 </div>
 
 <div>
