--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,5 +1,7 @@
 <h3><img src="img/mwater-large.png" style="max-height: 64px"></img> mWater Mobile App</h3>
 
+<p class="muted">Version: {{version}}</p>
+
 <p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
 
 <p>To perform tasks, click on the menu button at the top right corner. This will show you all of the basic activities that can be performed.</p>
