Leaflet update. Forms upload.

--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -1,9 +1,11 @@
+
+{{#if offlineSourceCodes}}
 <h5>Offline Source Creation</h5>
 <div>
     Number of sources that can be created offline: <b>{{offlineSourceCodes}}</b>
 </div>
 <button id="request_source_codes" class="btn" type="button">Request more</button>
-
+{{/if}}
 
 <h4>Advanced</h4>
 <div>
