--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,6 +1,9 @@
 <h3><img src="img/mwater-large.png" style="max-height: 64px"></img> mWater Mobile App</h3>
 
-<p class="muted">Version: {{version}}</p>
+<p class="muted">User:
+<b>{{#if login}}{{login.user}}{{else}}Not logged in{{/if}}</b>
+{{#if lastSyncDate}}Sync: <b>{{timeago lastSyncDate}} {{lastSyncMessage}}</b>{{/if}}
+Version: <b>{{version}}</b></p>
 
 <p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
 
