--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -34,12 +34,12 @@ a {
   background-repeat: no-repeat;
   vertical-align: middle;
   line-height: 25px;
-  padding-left: 25px;
+  padding-left: 33px;
   background-image: url('../img/checkbox.png');
   font-size: 11pt;
   font-weight: bold;
+  background-position-x: 8px;
   background-position-y: 3px;
-  margin-left: 8px;
   margin-bottom: 3px;
   margin-top: 3px;
   cursor: pointer;
@@ -53,12 +53,12 @@ a {
   background-repeat: no-repeat;
   vertical-align: middle;
   line-height: 30px;
-  padding-left: 25px;
+  padding-left: 33px;
   background-image: url('../img/radio-button.png');
   font-size: 12pt;
   font-weight: bold;
+  background-position-x: 8px;
   background-position-y: 6px;
-  margin-left: 8px;
   margin-bottom: 3px;
   margin-top: 3px;
   cursor: pointer;
