Fixes to survey list

--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -7,7 +7,7 @@
 <li><a id="new_test"><i class="icon-tint icon-white"></i> Start New Water Test</a></li>
 <li><a id="existing_test"><i class="icon-tint icon-white"></i> Recent Water Tests</a></li>
 <li><a id="new_survey"><i class="icon-list-alt icon-white"></i> Start New Survey</a></li>
-<li><a id="existing_survey"><i class="icon-check icon-white"></i> Continue Existing Survey</a></li>
+<li><a id="existing_survey"><i class="icon-check icon-white"></i> Recent Surveys</a></li>
 <li><a id="settings"><i class="icon-cog icon-white"></i> Settings</a></li>
 <li><a id="report_problem"><i class="icon-exclamation-sign icon-white"></i> Report a Problem</a></li>
 <li><a id="logout"><i class="icon-off icon-white"></i> Logout</a></li>
