--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -6,20 +6,11 @@
 }
 </style>
 
-<h4>Select survey to continue</h4>
-{{#if responses}}
-<table class="table table-bordered">
-  {{#each responses}}
-  <tr class="response tappable" id="{{_id}}">
-    <td>
-      <span id="name_{{_id}}"></span> (started {{formatDate started "%F"}})
-      <br/>
-      <span class="muted">{{code}}</span>
-    </td>
-    <td style="vertical-align:middle; border-left:none; width: 16px"><i class="icon-chevron-right"></i></td>
-  </tr>
-  {{/each}}
-</table>
-{{else}}
-  <h5>No incompleted surveys found</h5>
-{{/if}}
+<div>
+  <h4>Incomplete Surveys</h4>
+  <table class="table table-bordered" id="incomplete_table">
+  </table>
+  <h4>Recent Completed Surveys</h4>
+  <table class="table table-bordered" id="recent_table">
+  </table>
+</div>
