--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -5,9 +5,14 @@
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
 			<a class="brand">
 				<span id="navbar_title"></span></a>
-			<a class="btn btn-navbar pull-right" style="display: block"
-				id="navbar_slidemenu_button"><span class="icon-bar"></span><span
-				class="icon-bar"></span><span class="icon-bar"></span></a>
+
+			<ul class="nav pull-right">  
+			<li>  
+			    <a id="navbar_slidemenu_button" class="menuitem pressed" style="background: url(img/menu_32x32.png) no-repeat 0; width: 10px;">
+			      &nbsp;
+			    </a>
+			 </li>
+			</ul>
 			<div id="navbar_buttons">
 			</div>
 		</div>
