--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,4 +1,4 @@
-<h3 style="background-color:black; padding: 10px;"><img src="img/mWater_50px_transparent.png"></img></h3>
+<h3><img src="img/mWater_50px_BkM_transparent.png"></img></h3>
 
 <p class="muted">User:
 <b>{{#if login}}{{login.user}}{{else}}Not logged in{{/if}}</b>
