Test version of broadstreet

--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,20 +1,16 @@
-<h3><img src="img/mwater-large.png" style="max-height: 64px"></img> mWater Mobile App</h3>
-
 <p class="muted">User:
 <b>{{#if login}}{{login.user}}{{else}}Not logged in{{/if}}</b>
-{{#if lastSyncDate}}Sync: <b>{{timeago lastSyncDate}} {{lastSyncMessage}}</b>{{/if}}
-Version: <b>{{version}}</b></p>
+Version: <b>Technology Preview</b></p>
 
-<p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
+<div class="well">
+  <div style="font-size: 150%">Broadstreet Mobile App</div>
+  <div><em>Tracking and responding to diarrheal outbreaks in real-time</em></div>
+</div>
 
-<p>To perform tasks, click on the menu button at the top right corner. This will show you all of the basic activities that can be performed.</p>
-
-<p>You can browse nearby water sources in the list of sources. You can also see water sources on a map.</p>
-
-<p>Recording water tests is as easy as clicking on the plus icon, or opening a particular water source and clicking Add. mWater supports a wide range of water tests and has reliable, low-cost water tests available for sale.</p>
-
-<p>Some actions will require you to be logged in and will ask you for a username and password. If you do not have one, signing up is an easy one step process.</p>
-
-<p>This app works both with and without a data connection. Any changes that you make while not connected will be automatically uploaded the next time you use the app with a data connection.</p>
-
-<p>mWater includes a powerful and flexible survey engine. Start a sample survey or see the complete list of available surveys. Any work that you do on a survey is always immediately backed up, and you can leave and return to complete a survey at a later time.</p>
+<p class="text-center">
+<button id="new_diarr_case" class="btn btn-large btn-danger">Report Diarrhea Case</button>
+</p>
+<p><p/>
+<p class="text-center">
+<button id="recent_diarr_cases" class="btn btn-large">My Recent Cases</button>
+</p>
