--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -4,7 +4,9 @@
 			<i class="icon-chevron-left icon-white" id="navbar_back" 
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
 			<a class="brand">
-				<span id="navbar_title"></span></a>
+				<img src="img/mWater_36px_transparent.png"></img>
+				<!--Title now not shown <span id="navbar_title"></span>-->
+			</a>
 
 			<ul class="nav pull-right">  
 			<li>  
