--- a/app/templates/pages/MainPage.hbs
+++ b/app/templates/pages/MainPage.hbs
@@ -1,20 +1,55 @@
-<h3><img src="img/mWater_50px_BkM_transparent.png"></img></h3>
+<style>
 
-<p class="muted">User:
-<b>{{#if login}}{{login.user}}{{else}}Not logged in{{/if}}</b>
-{{#if lastSyncDate}}Sync: <b>{{timeago lastSyncDate}} {{lastSyncMessage}}</b>{{/if}}
-Version: <b>{{version}}</b></p>
+.main-header {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 25px;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
 
-<p>mWater combines mobile technology with water testing to help ensure safe drinking water for everyone.</p>
+.main-subheader {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	color: #478fcc;
+	margin-bottom: 15px;
+}
 
-<p>To perform tasks, click on the menu button at the top right corner. This will show you all of the basic activities that can be performed.</p>
+.drop-bullet {
+	color: #478fcc;
+	background-image: url('img/water_drop_xs.png');
+	background-repeat: no-repeat;
+	padding-left: 18px;
+}
 
-<p>You can browse nearby water sources in the list of sources. You can also see water sources on a map.</p>
+.instructions {
+}
 
-<p>Recording water tests is as easy as clicking on the plus icon, or opening a particular water source and clicking Add. mWater supports a wide range of water tests and has reliable, low-cost water tests available for sale.</p>
+.inset {
+	margin-left: 15px;
+	margin-right: 15px;
+}
 
-<p>Some actions will require you to be logged in and will ask you for a username and password. If you do not have one, signing up is an easy one step process.</p>
+</style>
 
-<p>This app works both with and without a data connection. Any changes that you make while not connected will be automatically uploaded the next time you use the app with a data connection.</p>
+<p class="muted">
+	Version: <b>{{version}}</b>
 
-<p>mWater includes a powerful and flexible survey engine. Start a sample survey or see the complete list of available surveys. Any work that you do on a survey is always immediately backed up, and you can leave and return to complete a survey at a later time.</p>
+	User: {{#if login}}{{login.user}}{{else}}Not logged in{{/if}}</b>
+
+	{{#if lastSyncDate}}Sync: <b>{{timeago lastSyncDate}} {{lastSyncMessage}}</b>{{/if}}
+</p>
+
+<div class="inset">
+	<div class="main-header">Water Testing <span class="mwater-highlight">+</span> Mobile Technology.</div>
+	<div class="main-subheader">Bringing safe drinking water to more people.</div>
+
+	<div class="instructions"><b>Get started right away:</b></div>
+	<div class="instructions">To perform tasks, click on the menu button at the far top right corner. To record water tests or start a survey, click on the plus icon in the menu bar.</div>
+	<div></div>
+	<h5>mWater has a wide range of powerful features:</h5>
+	<div class="drop-bullet">Support for a wide range of water tests</div>
+	<div class="drop-bullet">Reliable, low-cost water tests for sale</div>
+	<div class="drop-bullet">Automatic saving of your work until you have a data connection</div>
+	<div class="drop-bullet">Powerful and flexible survey engine</div>
+</div>
