EC Plate counting working

--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -16,3 +16,7 @@
 <div>
   <button id="crash" class="btn btn-danger" type="button">Crash!</button>
 </div>
+
+<div>
+	<button id="test_ecplates" class="btn" type="button">Test EC Compact Dry Plate Counter</button>
+</div>
