--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -4,16 +4,15 @@
 			<i class="icon-chevron-left icon-white" id="navbar_back" 
 				style="margin-top: 13px; margin-left: 1px; float: left;"></i>
 			<a class="brand">
-				<span id="navbar_title"></span></a>
-
-<ul class="nav pull-right">
-  <li>
-    <a id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 6px;">
-		&nbsp;
-    </a>
-  </li>
-</ul>
-
+				<span id="navbar_title"></span>
+			</a>
+			<ul class="nav pull-right">
+			  <li>
+			    <a id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 6px;">
+					&nbsp;
+			    </a>
+			  </li>
+			</ul>
 			<div id="navbar_buttons">
 			</div>
 		</div>
