--- a/app/templates/pages/SettingsPage.hbs
+++ b/app/templates/pages/SettingsPage.hbs
@@ -16,7 +16,13 @@
 <div>
   <button id="crash" class="btn btn-danger" type="button">Crash!</button>
 </div>
+<br/><br/>
 
 <div>
 	<button id="test_ecplates" class="btn" type="button">Test EC Compact Dry Plate Counter</button>
+</div>
+<br/><br/>
+<div>
+	<button id="weinre" class="btn btn-warning" type="button">Start Remote Debugger</button>
+	<div id="weinre_details"></div>
 </div>
