--- a/app/templates/pages/TestPage.hbs
+++ b/app/templates/pages/TestPage.hbs
@@ -15,7 +15,7 @@
 
 <div class="testcode_div">
 	<span class="muted"><b>Test </b></span>
-	<span class="testcode">{{#if test.code}}{{test.code}}{{else}}Unnamed{{/if}}</span>
+	<span class="testcode">{{#if test.code}}{{test.code}}{{else}}unnamed{{/if}}</span>
 	<span class="muted"><b> of </b></span><b>{{form.name}}</b>
 </div>
 
