Work in progress.

--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -3,10 +3,17 @@
 </style>
 
 <div class="page">
+  <h3>Welcome to mWater</h3>
+  <div>
+    <button id="demo_button" type="submit" class="btn btn-large" style="background-color: #478FCC">Demo</button> 
+    <i class="icon-arrow-left"></i> Try out app without an account
+  <div>
+  <br>
+  <br>
   <div class="tabbable">
     <ul class="nav nav-tabs">
-      <li class="active bigtab"><a href="#tab1" data-toggle="tab">New User</a></li>
-      <li class="bigtab"><a href="#tab2" data-toggle="tab">Existing User</a></li>
+      <li class="active bigtab"><a href="#tab1" data-toggle="tab">Signup</a></li>
+      <li class="bigtab"><a href="#tab2" data-toggle="tab">Login</a></li>
     </ul>
     <div class="tab-content">
       <div class="tab-pane active" id="tab1">
@@ -42,6 +49,4 @@
       </div>
     </div>
   </div>
-
-  <button id="demo_button" type="submit" class="btn btn-inverse">Enter Demo Mode</button>
 </div>
